# Cairo-Composite-Manager

./: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  plugin.make  shave.in  shave.m4
data/: Makefile.am  cairo-compmgr.desktop.in.in  cairo-compmgr.pc.in  cairo-compmgr.schemas.in  cairo-compmgr.xml  ccm-display.schema-key.in  ccm-preferences.ui  ccm-screen.schema-key.in
debian/: cairo-compmgr-core.install  cairo-compmgr-dev.install  cairo-compmgr-doc.install  cairo-compmgr-plugins.install  cairo-compmgr-vala.install  cairo-compmgr.install  changelog  control  copyright  libcairo-compmgr-dev.install  rules
doc/: Makefile.am  cairo-compmgr.1.in
doc/reference/: Makefile.am  cairo-compmgr-docs.xml  cairo-compmgr-sections.txt  cairo-compmgr-undeclared.txt  cairo-compmgr-undocumented.txt  cairo-compmgr.types
doc/reference/tmpl/: cairo-compmgr-unused.sgml  ccm-debug.sgml  ccm-display.sgml  ccm-drawable.sgml  ccm-image.sgml  ccm-keybind.sgml  ccm-pixmap.sgml  ccm-preferences-page-plugin.sgml  ccm-preferences-page.sgml  ccm-region.sgml  ccm-screen-plugin.sgml  ccm-screen.sgml  ccm-window-plugin.sgml  ccm-window.sgml
gir/: Makefile.am  cairo-1.0.injections  xlib-2.0.injections
lib/: Makefile.am  ccm-buffer-surface.vala  ccm-cairo-utils.c  ccm-cairo-utils.h  ccm-config-adjustment.c  ccm-config-adjustment.h  ccm-config-check-button.c  ccm-config-check-button.h  ccm-config-color-button.c  ccm-config-color-button.h  ccm-config-entry-shortcut.c  ccm-config-entry-shortcut.h  ccm-config-gconf.c  ccm-config-gconf.h  ccm-config-key.c  ccm-config-key.h  ccm-config-schema.c  ccm-config-schema.h  ccm-config.c  ccm-config.h  ccm-object.c  ccm-object.h  ccm-set.vala  ccm-source.c  ccm-source.h  ccm-timeline.c  ccm-timeline.h  ccm-timeline.vala  ccm-timeout-interval.c  ccm-timeout-interval.h  ccm-timeout-interval.vala  ccm-timeout-pool.c  ccm-timeout-pool.h  ccm-timeout-pool.vala  ccm-timeout.vala  ccm-watch.vala  eggaccelerators.c  eggaccelerators.h  glade-ccm.c  test-boxed-blur.c  (+4 more)
plugins/: Makefile.am
plugins/automate/: Makefile.am  ccm-action-pointer-motion.vala  ccm-action-pointer-press.vala  ccm-action-pointer-release.vala  ccm-action-pointer.vala  ccm-action.vala  ccm-automate-dialog.vala  ccm-automate.plugin.desktop.in  ccm-automate.schema-key.in  ccm-automate.ui  ccm-automate.vala  ccm-story-board.vala
plugins/clone/: Makefile.am  ccm-clone.c  ccm-clone.h  ccm-clone.plugin.desktop.in  ccm-clone.vala
plugins/decoration/: Makefile.am  ccm-decoration.c  ccm-decoration.h  ccm-decoration.plugin.desktop.in  ccm-decoration.schema-key.in  ccm-decoration.schemas.in  ccm-decoration.ui
plugins/fade/: Makefile.am  ccm-fade.c  ccm-fade.h  ccm-fade.plugin.desktop.in  ccm-fade.schema-key.in  ccm-fade.schemas.in  ccm-fade.ui
plugins/freeze/: Makefile.am  ccm-freeze.c  ccm-freeze.h  ccm-freeze.plugin.desktop.in  ccm-freeze.schema-key.in  ccm-freeze.schemas.in  ccm-freeze.ui
plugins/magnifier/: Makefile.am  ccm-magnifier.c  ccm-magnifier.h  ccm-magnifier.plugin.desktop.in  ccm-magnifier.schema-key.in  ccm-magnifier.schemas.in
plugins/menu-animation/: Makefile.am  ccm-menu-animation.c  ccm-menu-animation.h  ccm-menu-animation.plugin.desktop.in  ccm-menu-animation.schema-key.in  ccm-menu-animation.schemas.in  ccm-menu-animation.ui
plugins/mosaic/: Makefile.am  ccm-mosaic.c  ccm-mosaic.h  ccm-mosaic.plugin.desktop.in  ccm-mosaic.schema-key.in  ccm-mosaic.schemas.in  ccm-mosaic.ui  ccm-mosaic.vala
plugins/opacity/: Makefile.am  ccm-opacity.c  ccm-opacity.h  ccm-opacity.plugin.desktop.in  ccm-opacity.schema-key.in  ccm-opacity.schemas.in  ccm-opacity.ui
plugins/perf/: Makefile.am  ccm-perf.c  ccm-perf.h  ccm-perf.plugin.desktop.in  ccm-perf.schema-key.in  ccm-perf.schemas.in
plugins/shadow/: Makefile.am  ccm-shadow.c  ccm-shadow.h  ccm-shadow.plugin.desktop.in  ccm-shadow.schema-key.in  ccm-shadow.schemas.in  ccm-shadow.ui
plugins/snapshot/: Makefile.am  ccm-snapshot-dialog.c  ccm-snapshot-dialog.h  ccm-snapshot-dialog.ui  ccm-snapshot-main.c  ccm-snapshot.c  ccm-snapshot.h  ccm-snapshot.plugin.desktop.in  ccm-snapshot.schema-key.in  ccm-snapshot.ui
plugins/stats/: Makefile.am  ccm-chart.vala  ccm-cpu-watcher.vala  ccm-disks-watcher.vala  ccm-graphic-watcher.vala  ccm-stats.plugin.desktop.in  ccm-stats.schema-key.in  ccm-stats.vala  ccm-watcher.vala
plugins/vala-test/: Makefile.am  ccm-vala-window-plugin.plugin.desktop.in  ccm-vala-window-plugin.schema-key.in  ccm-vala-window-plugin.vala
plugins/window-animation/: Makefile.am  ccm-window-animation.plugin.desktop.in  ccm-window-animation.schema-key.in  ccm-window-animation.ui  ccm-window-animation.vala
po/: ChangeLog  POTFILES.in  POTFILES.skip
src/: Makefile.am  async-getprop.c  async-getprop.h  cairo-compmgr.c  ccm-animation.c  ccm-animation.h  ccm-cell-extension.c  ccm-cell-extension.h  ccm-cell-renderer-extension.c  ccm-cell-renderer-extension.h  ccm-config.c  ccm-config.h  ccm-cursor.c  ccm-cursor.h  ccm-debug.c  ccm-debug.h  ccm-display.c  ccm-display.h  ccm-drawable.c  ccm-drawable.h  ccm-extension-loader.c  ccm-extension-loader.h  ccm-extension.c  ccm-extension.h  ccm-image.c  ccm-image.h  ccm-keybind.c  ccm-keybind.h  ccm-marshallers.list  ccm-object.h  ccm-pixmap-backend.c  ccm-pixmap-backend.h  ccm-pixmap-buffered-image.c  ccm-pixmap-buffered-image.h  ccm-pixmap-buffered-shm.c  ccm-pixmap-buffered-shm.h  ccm-pixmap-glitz.c  ccm-pixmap-glitz.h  ccm-pixmap-image.c  ccm-pixmap-image.h  (+53 more)
test/: Makefile.am  test-clone-screen.c  test-clone.c  test-recorder.vala
tools/: Makefile.am  ccm-schema-key-to-gconf.c
vapi/: Makefile.am  X.vapi  cairo-compmgr.deps  cairo-compmgr.vapi  config.vapi  libgtop-2.0.vapi  math.vapi  nvml.h  nvml.vapi  source.vapi
